--- a/index.html
+++ b/index.html
@@ -4,94 +4,98 @@
     <title>KhurshudyanPhoto</title>
     <link rel="stylesheet" type="text/css" href="app/css/main.css">
     <link rel="stylesheet" type="text/css" href="app/css/default.css" />
-	<link rel="stylesheet" type="text/css" href="app/css/component.css" />
-	<!-- <link rel="stylesheet" type="text/css" href="app/css/demo.css" /> -->
-	<link rel="stylesheet" type="text/css" href="app/css/load_more.css" />
+  <link rel="stylesheet" type="text/css" href="app/css/component.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="app/css/demo.css" /> -->
+  <link rel="stylesheet" type="text/css" href="app/css/load_more.css" />
     <script type="text/javascript" data-main="app/js/app.js" src="app/vendor/require/require.js"></script>
   </head>
   <body>
-  	<div id="loading">
-			<div id="loading-center">
-				<div id="loading-center-absolute">
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-					<div class="object"></div>
-				</div>
-			</div>
-		</div>
-	  <div id="content">
-	  	<div id="home">
-				<video poster="app/img/main.jpg" id="bgvid" >
-					<source src="app/video/video.mp4" type="video/mp4">
-					<source src="app/video/main.ogv" type="video/ogg">
-					Your browser does not support the video tag.
-				</video>
-	  		<span id="play_video">
-	  			<span class="play_button"></span>
-	  		</span>
-	  	</div>
-	  	<div id="portraits">
-	  		<ul class="image_container grid cs-style-4"></ul>
-	  		<div class="load_more_section">
-				<nav class="load_more cl-effect-12">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  		<div class="load_more_section preloader-anim">
-				<nav class="cl-effect-12-1">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  	</div>
-	  	<div id="nature">
-	  		<ul class="image_container grid cs-style-4"></ul>
-			<div class="load_more_section">
-				<nav class="load_more cl-effect-12">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  		<div class="load_more_section preloader-anim">
-				<nav class="cl-effect-12-1">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  	</div>
-	  	<div id="when_talking_pictures">
-	  		<ul class="image_container grid cs-style-4"></ul>
-	  		<div class="load_more_section">
-				<nav class="load_more cl-effect-12">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  		<div class="load_more_section preloader-anim">
-				<nav class="cl-effect-12-1">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  	</div>
-	  	<div id="commercial">
-	  		<ul class="image_container grid cs-style-4"></ul>
-	  		<div class="load_more_section">
-				<nav class="load_more cl-effect-12">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  		<div class="load_more_section preloader-anim">
-				<nav class="cl-effect-12-1">
-					<a>Load More</a>
-				</nav>
-	  		</div>
-	  	</div>
-	  	<div id="about"></div>
-	  	<div id="contact"></div>
-	  </div>
+    <div id="loading">
+      <div id="loading-center">
+        <div id="loading-center-absolute">
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+          <div class="object"></div>
+        </div>
+      </div>
+    </div>
+    <div id="content">
+      <div id="home">
+        <!-- <video poster="app/img/main.jpg" id="bgvid" >
+          <source src="app/video/video.mp4" type="video/mp4">
+          <source src="app/video/main.ogv" type="video/ogg">
+          Your browser does not support the video tag.
+        </video>
+        <span id="play_video">
+          <span class="play_button"></span>
+        </span> -->
+      </div>
+      <div id="portraits">
+        <ul class="image_container grid cs-style-4"></ul>
+        <div class="load_more_section">
+        <nav class="load_more cl-effect-12">
+          <a>Load More</a>
+        </nav>
+        </div>
+        <div class="load_more_section preloader-anim">
+        <nav class="cl-effect-12-1">
+          <a>Load More</a>
+        </nav>
+        </div>
+      </div>
+      <div id="nature">
+        <ul class="image_container grid cs-style-4"></ul>
+      <div class="load_more_section">
+        <nav class="load_more cl-effect-12">
+          <a>Load More</a>
+        </nav>
+        </div>
+        <div class="load_more_section preloader-anim">
+        <nav class="cl-effect-12-1">
+          <a>Load More</a>
+        </nav>
+        </div>
+      </div>
+      <div id="when_talking_pictures">
+        <ul class="image_container grid cs-style-4"></ul>
+        <div class="load_more_section">
+        <nav class="load_more cl-effect-12">
+          <a>Load More</a>
+        </nav>
+        </div>
+        <div class="load_more_section preloader-anim">
+        <nav class="cl-effect-12-1">
+          <a>Load More</a>
+        </nav>
+        </div>
+      </div>
+      <div id="commercial">
+        <ul class="image_container grid cs-style-4"></ul>
+        <div class="load_more_section">
+        <nav class="load_more cl-effect-12">
+          <a>Load More</a>
+        </nav>
+        </div>
+        <div class="load_more_section preloader-anim">
+        <nav class="cl-effect-12-1">
+          <a>Load More</a>
+        </nav>
+        </div>
+      </div>
+      <div id="about"></div>
+      <div id="contact"></div>
+    </div>
+    <div id="gallery">
+      <span id="close_gallery">X</span>
+      <img id="gallery_img">
+    </div>
   </body>
 </html>
 
